--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Lumina]
-Pos=12,31
+Pos=1,14
 Size=776,502
+Collapsed=0
+
+[Window][Window1]
+Pos=17,520
+Size=760,57
 Collapsed=0
 
